# pycape

./: .gitignore  CONTRIBUTING.md  Makefile  NOTICE  README.md  RELEASING.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: cape-encrypt-main.yml  cape-encrypt-release.yml  main.yml  pycape-main.yml  pycape-release.yml  release-pycape.yml  serdio-main.yml  serdio-not-main.yml  serdio-release.yml
cape/: cape.py
cape_encrypt/: .bumpversion.cfg  Makefile  NOTICE  README.md  pyproject.toml
cape_encrypt/cape_encrypt/: __init__.py  cape_encrypt.py  cape_encrypt_test.py
docs/: attestation.md  attestation_test.md  cape.md  cape_test.md  enclave_encrypt.md  enclave_encrypt_test.md  function_ref.md
docs/source/: conf.py  index.rst  walkthrough.md
examples/: README.md  async_echo.py  capedocs.token  deploy_run_echo.py  echo.json  echo_token.json  invoke.py  invoke_echo.py  main.py  mean.json  mean_token.json  multiple_inputs.py  run.py  run_echo.py  run_mean.py  run_multi_echo.py  server.py  user.token  user_encrypt.py
examples/echo/: app.py
examples/linear_regression/: linear_regression_project.py
examples/llama/: llama.py
examples/mean/: app.py  mean_token.json
hpke_spec/: Cargo.toml  hpke_spec_test.py  pyproject.toml
hpke_spec/src/: lib.rs
lift_io/: Makefile  io_lifter.py  pyproject.toml  requirements-dev.txt
lift_io/lift_io/: __init__.py  serde.py
lift_io/requirements/: base.txt
md_docs/: postprocess_mddocs.py
md_docs/pycape/: README.md  attestation.md  attestation_test.md  cape.md  cape_test.md  enclave_encrypt.md  enclave_encrypt_test.md  function_ref.md  new_attestation.md
md_docs/serdio/: README.md  serdio.io_lifter.md  serdio.io_lifter_test.md  serdio.md  serdio.serde_test.md
pycape/: __init__.py  _attestation.py  _attestation_test.py  _config.py  _enclave_encrypt.py  _enclave_encrypt_test.py  _token.py  attestation.py  attestation_test.py  cape.py  cape_encrypt.py  cape_test.py  crypto.py  enclave_encrypt.py  enclave_encrypt_test.py  function_ref.py  function_ref_test.py  io_lifter.py  io_lifter_test.py  serde.py  serde_test.py  serialize.py  serialize_test.py  token.py
pycape/api/dataview/: dataview.py
pycape/api/project/: project.py  project_test.py
pycape/api/task/: task.py  task_test.py
pycape/experimental/: cli.py
pycape/llms/: __init__.py  crypto.py  crypto_test.py  llms.py
pycape/network/: requester.py
pycape/tests/: test.py  tests.py
requirements/: base.in  base.txt  dev.in  dev.txt
serdio/: Makefile  NOTICE  README.md  pyproject.toml  requirements.txt
serdio/serdio/: __init__.py  _test_utils.py  func_utils.py  io_lifter.py  io_lifter_test.py  serde.py  serde_test.py  utils_test.py
