[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pycape"]

[project]
name = "pycape"
description = "The Cape Privacy Python SDK"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
    "cbor2 >= 5.4", 
    "hybrid_pke~=1.0",
    "websockets >= 10.3",
    "pyOpenSSL >= 22.0",
    "case >= 0.9",
    "requests >= 2.28",
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Security :: Cryptography",
]
urls = {repository = "https://github.com/capeprivacy/pycape"}
