[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["serdio*"]

[project]
name = "pycape" 
description = "The Cape Privacy Python SDK"
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.7"
dependencies = [
    "cbor2", 
    "hybrid_pke",
    "websockets",
    "pyOpenSSL",
    "cose",
    "requests",
    "serdio",
]
authors = [
    {email = "contact@capeprivacy.com", name = "Cape Privacy"}
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Security :: Cryptography",
]
urls = {repository = "https://github.com/capeprivacy/pycape"}

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [ 'version = "{version}"' ]
"serdio/pyproject.toml" = [ 'version = "{version}"' ]
"pycape/__init__.py" = [ '__version__ = "{version}"' ]
"serdio/serdio/__init__.py" = [ '__version__ = "{version}"' ]
