[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["serdio*", "cape_encrypt*"]

[tool.poetry]
name = "pycape"
description = "The Cape Privacy Python SDK"
readme = "README.md"
version = "3.1.2-rc"
authors = ["Cape Privacy <contact@capeprivacy.com>"]
license = "LICENSE"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Security :: Cryptography",
]
urls = {repository = "https://github.com/capeprivacy/pycape"}

[tool.poetry.dependencies]
python = ">=3.7.9"
synchronicity = "^0.5.3"
cbor2 = "^5.4.6"
requests = "^2.31.0"
websockets = "^11.0.3"
pyopenssl = "^23.2.0"
serdio = "^3.1.1"
cose = "^0.9.dev8"
pydantic = "^2.3.0"

[tool.bumpver]
current_version = "3.1.2-rc"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [ 'version = "{version}"' ]
"serdio/pyproject.toml" = [ 'version = "{version}"' ]
"pycape/__init__.py" = [ '__version__ = "{version}"' ]
"serdio/serdio/__init__.py" = [ '__version__ = "{version}"' ]
