[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cape_encrypt"
description = "Encryption aid for functions running in Cape Enclaves"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
]
urls = {repository = "https://github.com/capeprivacy/pycape"}
