[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cape_encrypt"
description = "Encryption aid for functions running in Cape Enclaves"
readme = "README.md"
version = "0.1.1"
requires-python = ">=3.7"
authors = [
    {email = "contact@capeprivacy.com", name = "Cape Privacy"}
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
]
urls = {repository = "https://github.com/capeprivacy/pycape"}
