[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "serdio"
description = "Automatic serialization of function inputs and outputs using MessagePack."
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.7"
dependencies = ["msgpack"]
authors = [
    {email = "contact@capeprivacy.com", name = "Cape Privacy"}
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
]
urls = {repository = "https://github.com/capeprivacy/pycape"}
